--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,8 @@
     <meta name="robots" content="all" />
     <meta name="robots" content="index" />
     <meta name="robots" content="follow" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
   </head>
   <body>
     <app-root></app-root>
