--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       href="/assets/icons/icon-72x72.png"
     />
     <link rel="apple-touch-icon" href="/assets/icons/icon-512x512.webp" />
-    <link rel="manifest" href="public/manifest.webmanifest" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1d2123" />
     <meta name="color-scheme" content="normal" />
 
